--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,9 +1,9 @@
 # Uncomment the next line to define a global platform for your project
-platform :ios, '9.0'
+platform :ios, '11.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'RNFirebaseStarter' do
-  # Pods for RNFirebaseStarter
+target 'lucusapp' do
+  # Pods for lucusapp
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 
@@ -47,7 +47,7 @@ target 'RNFirebaseStarter' do
   pod 'Fabric', '~> 1.10.2'
   pod 'Crashlytics', '~> 3.14.0'
 
-  target 'RNFirebaseStarterTests' do
+  target 'lucusappTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -56,13 +56,13 @@ target 'RNFirebaseStarter' do
 
 end
 
-target 'RNFirebaseStarter-tvOS' do
+target 'lucusapp-tvOS' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 
-  # Pods for RNFirebaseStarter-tvOS
+  # Pods for lucusapp-tvOS
 
-  target 'RNFirebaseStarter-tvOSTests' do
+  target 'lucusapp-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
